# folly

./: .gitignore  BUILD.bazel  WORKSPACE
folly/: BUILD.bazel
folly/concurrency/: BUILD.bazel
folly/container/: BUILD.bazel
folly/detail/: BUILD.bazel
folly/functional/: BUILD.bazel
folly/hash/: BUILD.bazel
folly/lang/: BUILD.bazel
folly/memory/: BUILD.bazel
folly/memory/detail/: BUILD.bazel
folly/net/: BUILD.bazel
folly/net/detail/: BUILD.bazel
folly/portability/: BUILD.bazel
folly/system/: BUILD.bazel
folly/test/: BUILD.bazel
