package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cache_locality",
    srcs = [
        "CacheLocality.h",
        "CacheLocality.cpp",
    ],
    hdrs = ["CacheLocality.h"],
    deps = [
        "//folly:indestructible",
        "//folly:likely",
        "//folly:memory",
        "//folly:portability",
        "//folly/hash:hash",
        "//folly/lang:align",
        "//folly/lang:exception",
        "//folly/system:thread_id",
        "//folly:conv",
        "//folly:file_util",
        "//folly:format",
        "//folly:scope_guard",
    ],
    copts = ["-I.", "-I$(BINDIR)", "-std=c++17"],
    linkopts = ["-ldl"],
)