package(default_visibility = ["//visibility:public"])

cc_library(
    name = "invoke",
    srcs = ["Invoke.h"],
    hdrs = ["Invoke.h"],
    deps = ["//folly:preprocessor"],
)

cc_library(
    name = "apply_tuple",
    srcs = ["ApplyTuple.h"],
    hdrs = ["ApplyTuple.h"],
    deps = [
        "//folly:traits",
        "//folly:utility",
        "//folly/functional:invoke",
    ]
)