package(default_visibility = ["//visibility:public"])

# cc_test(
#     name = "producer_consumer_queue_test",
#     srcs = [
#         "ProducerConsumerQueueTest.cpp",
#     ],
#     deps = [
#         "//folly:producer_consumer_queue",
#         "//folly/portability:gtest",
#         "@com_github_google_glog//:glog",
#         "@com_github_google_googletest//:gtest",
#     ],
#     copts = ["-I.", "-I$(BINDIR)", "-std=c++17"],
#     linkopts = ["-nostartfiles", "-lstdc++"],
# )

# cc_test(
#     name = "glog_test",
#     srcs = ["GLogTest.cpp"],
#     deps = [
#         "//folly:glog",
#         "//folly/portability:gtest",
#         "@com_github_google_googletest//:gtest",
#         "@com_github_google_glog//:glog",
#     ],
#     copts = ["-I.", "-I$(BINDIR)", "-std=c++17", ],
#     linkopts = ["-nostartfiles", "-lstdc++",],
#     linkstatic = False,
# )