package(default_visibility = ["//visibility:public"])

cc_library(
    name = "socket_file_descriptor_map",
    srcs = [
        "SocketFileDescriptorMap.h",
        "SocketFileDescriptorMap.cpp",
    ],
    hdrs = ["SocketFileDescriptorMap.h"],
    deps = ["//folly/portability:windows"],
    copts = ["-I."],
)